--- a/style.css
+++ b/style.css
@@ -5,22 +5,25 @@
   box-sizing: border-box;
 }
 body {
+  background-color: bisque;
   font-family: "roboto", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  overflow: hidden;
-  margin: 0;
+  /* overflow: hidden; */
+  /* margin: 0; */
 }
 
 .container {
+  position: absolute;
   display: flex;
   width: 90vw;
 }
 .panel {
+  display: flex;
   position: relative;
-  background-size: auto 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 80vh;
@@ -35,23 +38,21 @@ body {
   color: black;
   font-family: cursive;
   font-size: 1.5rem;
-  position: absolute;
-  bottom: 1.5rem;
-  left: 1.5rem;
-  margin: 0;
   opacity: 0;
 }
 
 .panel.active {
   flex: 5;
+  align-items: flex-end;
 }
 
-.panel.panel.active h3 {
+.panel.active h3 {
   opacity: 1;
+  margin: auto, auto;
 }
 
 @media (max-width: 480px) {
-  .container {
+  p.container {
     width: 100vw;
   }
 
