--- a/style.css
+++ b/style.css
@@ -51,13 +51,16 @@ body {
   margin: auto, auto;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   p.container {
     width: 100vw;
   }
+  .panel {
+    margin: 0.2rem;
+  }
 
   .panel.active {
-    flex: 3;
+    flex: 4;
   }
   .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
