--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .panel h3 {
   color: black;
   font-family: cursive;
-  font-size: 1.5rem;
+  font-size: 1rem;
   opacity: 0;
 }
 
@@ -48,6 +48,7 @@ body {
 
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 1s ease-in 0.75s;
   margin: auto, auto;
 }
 
